# spectra

./: .gitignore  INSTRUCTIONS.md  QUICKSTART.md  README.md  REPORT.md  USAGE.md  app.py  pyproject.toml  requirements.txt  spectra.ipynb
.ipynb_checkpoints/: spectra-checkpoint.ipynb
