[project]
name = "spectra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "albumentations>=2.0.8",
    "datasets>=4.4.1",
    "gradio>=5.0.0",
    "huggingface-hub>=0.36.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.31.0",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.1",
    "tqdm>=4.66.0",
    "webdataset>=1.0.2",
]
